--- a/index.html
+++ b/index.html
@@ -20,32 +20,34 @@
       <div class="visual"></div>
       <div class="pads">
         <div class="pad1">
-          <audio class="sound" src="/audio/1.mp3"></audio>
+          <audio class="sound" src="./audio/1.mp3"></audio>
         </div>
         <div class="pad2">
-          <audio class="sound" src="/audio/2.mp3"></audio>
+          <audio class="sound" src="./audio/2.mp3"></audio>
         </div>
-        <div class="pad3"><audio class="sound" src="/audio/3.mp3"></audio></div>
+        <div class="pad3">
+          <audio class="sound" src="./audio/3.mp3"></audio>
+        </div>
         <div class="pad4">
-          <audio class="sound" class="sound" src="/audio/4.mp3"></audio>
+          <audio class="sound" class="sound" src="./audio/4.mp3"></audio>
         </div>
         <div class="pad5">
-          <audio class="sound" src="/audio/5.mp3"></audio>
+          <audio class="sound" src="./audio/5.mp3"></audio>
         </div>
         <div class="pad6">
-          <audio class="sound" src="/audio/6.mp3"></audio>
+          <audio class="sound" src="./audio/6.mp3"></audio>
         </div>
         <div class="pad7">
-          <audio class="sound" src="/audio/7.mp3"></audio>
+          <audio class="sound" src="./audio/7.mp3"></audio>
         </div>
         <div class="pad8">
-          <audio class="sound" src="/audio/8.mp3"></audio>
+          <audio class="sound" src="./audio/8.mp3"></audio>
         </div>
         <div class="pad9">
-          <audio class="sound" src="/audio/9.mp3"></audio>
+          <audio class="sound" src="./audio/9.mp3"></audio>
         </div>
         <div class="pad10">
-          <audio class="sound" src="/audio/10.mp3"></audio>
+          <audio class="sound" src="./audio/10.mp3"></audio>
         </div>
       </div>
     </div>
